# hfpics

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
src/hfpics/: __init__.py  core.py
tests/: test_hfpics.py
